@@ -15,6 +15,7 @@ from typing import (
     Tuple,
     TypeVar,
     MutableSequence,
+    Iterable,
 )
 
 import numpy as np
@@ -446,6 +447,9 @@ series_func_type = Callable[[pd.Series], Union[pd.Series, np.ndarray]]
 # type for mapping of functions to apply over callables
 column_function_map_type = Mapping[str, series_func_type]
 
+# subpaths type
+bank_subpaths_type = Union[str, Iterable[str]]
+
 # -------------------------- events validation constants
 
 
@@ -664,4 +668,14 @@ bar
 
     If a custom progress bar is to be used, it must have an `update`
     and `finish` method.
+"""
+
+paths_description = """
+sub_paths
+    A str, or iterable of str, specifying subdirectories (relative
+    to bank path) to allow updating only files in specific directories
+    of the bank. This is useful for large banks which have files added
+    to them in predictable locations. However, if other files are added
+    outside of these locations they may not get indexed as the banks timestamp
+    indicating the last time of indexing will still get updated.
 """
